Salesforce/main/default/main/default/objects/Contract/fields/Comercializa_paraguai__c.field-meta.xml
<CustomField>
    <fullName>Comercializa_paraguai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comercializa Paraguai</label>
    <type>Checkbox</type>
</CustomField>