Salesforce/main/default/main/default/objects/Contract/fields/Cultura__c.field-meta.xml
<CustomField>
    <fullName>Cultura__c</fullName>
    <defaultValue>&quot;SOJA&quot;</defaultValue>
    <label>Cultura</label>
    <length>80</length>
    <type>Text</type>
</CustomField>