Salesforce/main/default/main/default/objects/Contract/fields/Data_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Data_de_envio__c</fullName>
    <label>Data de envio</label>
    <type>Date</type>
</CustomField>