Salesforce/main/default/main/default/objects/Contract/fields/Data_de_impressao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_impressao__c</fullName>
    <description>ADM gera o PDF do documento</description>
    <inlineHelpText>ADM gera o PDF do documento</inlineHelpText>
    <label>Data de impressão</label>
    <type>Date</type>
</CustomField>