Salesforce/main/default/main/default/objects/Contract/fields/Data_de_recebemento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_recebemento__c</fullName>
    <description>ADM insere a data de chegada do contrato</description>
    <inlineHelpText>ADM insere a data de chegada do contrato</inlineHelpText>
    <label>Data de recebemento</label>
    <type>Date</type>
</CustomField>