Salesforce/main/default/main/default/objects/Contract/fields/Gerenciador__c.field-meta.xml
<CustomField>
    <fullName>Gerenciador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerenciador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>