Salesforce/main/default/main/default/objects/Contract/fields/Gerenciador_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Gerenciador_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerenciador Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contratos2</relationshipName>
    <type>Lookup</type>
</CustomField>