Salesforce/main/default/main/default/objects/Contract/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <length>80</length>
    <type>Text</type>
</CustomField>