Salesforce/main/default/main/default/objects/Contract/fields/Negocio__c.field-meta.xml
<CustomField>
    <fullName>Negocio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Negocio</label>
    <referenceTo>Negocio_por_Conta__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>