Salesforce/main/default/main/default/objects/Contract/recordTypes/Macro.recordType-meta.xml
<RecordType>
    <fullName>Macro</fullName>
    <active>true</active>
    <description>Default</description>
    <label>Macro</label>
</RecordType>