Salesforce/main/default/main/default/objects/Contract/recordTypes/Macro_Milho.recordType-meta.xml
<RecordType>
    <fullName>Macro_Milho</fullName>
    <active>true</active>
    <label>Macro Milho</label>
</RecordType>