Salesforce/main/default/main/default/objects/Contract/recordTypes/Termo_Juridico.recordType-meta.xml
<RecordType>
    <fullName>Termo_Juridico</fullName>
    <active>true</active>
    <label>Termo Juridico</label>
</RecordType>