Salesforce/main/default/main/default/objects/Contract/listViews/Miscontratosenaprobacin.listView-meta.xml
<ListView>
    <fullName>Miscontratosenaprobacin</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>P</value>
    </filters>
    <label>Mis contratos en aprobación</label>
</ListView>