Salesforce/main/default/main/default/objects/Contract/listViews/Miscontratospreliminares.listView-meta.xml
<ListView>
    <fullName>Miscontratospreliminares</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <label>Mis contratos preliminares</label>
</ListView>