Salesforce/main/default/main/default/objects/Contract/listViews/Todosloscontratosactivados.listView-meta.xml
<ListView>
    <fullName>Todosloscontratosactivados</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <label>Todos los contratos activados</label>
</ListView>