Salesforce/main/default/main/default/objects/Contract/listViews/Todosloscontratosenaprobacin.listView-meta.xml
<ListView>
    <fullName>Todosloscontratosenaprobacin</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>P</value>
    </filters>
    <label>Todos los contratos en aprobación</label>
</ListView>