Salesforce/main/default/main/default/objects/Contract/listViews/Todosloscontratospreliminares.listView-meta.xml
<ListView>
    <fullName>Todosloscontratospreliminares</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <label>Todos los contratos preliminares</label>
</ListView>